Fix misaligned character pos

--- a/src/components/Map/components/CharacterLayer/CharacterLayer.module.css
+++ b/src/components/Map/components/CharacterLayer/CharacterLayer.module.css
@@ -1,7 +1,7 @@
 .container {
     position: absolute;
-    top: calc(var(--tile-size) * 2);
-    left: calc(var(--tile-size) * 2);
+    top: calc(var(--tile-size) * 4);
+    left: calc(var(--tile-size) * 4);
 
     z-index: var(--character-layer-z-index);
 }
